--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[codz]
 *$py.class
+.git/
 
 # C extensions
 *.so
@@ -11,7 +12,7 @@ __pycache__/
 *.docx 
 
 #image
-*.png 
+*.png
 
 #data 
 data/processed/*.pkl 
